istio/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: central
  name: central-wms-web
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: main-port
  selector:
    app: central-wms-web
