istio/destination-rule.yaml

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: central-wms-web
  namespace: central
spec:
  host: central-wms-web
  subsets:
    - name: latest
      labels:
        version: latest
