istio/virtual-service-qc.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: central-wms-web
  namespace: central
spec:
  hosts:
    - wms-central.qc.sayweee.net
  gateways:
    - ingressgateway.istio-system.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: central-wms-web
            subset: latest
